--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ember-anchor",
-  "version": "0.0.0",
-  "description": "The default blueprint for ember-cli addons.",
+  "version": "0.0.1",
+  "description": "Simple scroll-to-anchor support for Ember.js apps",
   "directories": {
     "doc": "doc",
     "test": "tests"
@@ -11,11 +11,12 @@
     "build": "ember build",
     "test": "ember try:testall"
   },
-  "repository": "",
+  "repository": "https://github.com/truenorth/embrt-anchor.git",
+  "homepage": "https://github.com/truenorth/embrt-anchor",
   "engines": {
     "node": ">= 0.10.0"
   },
-  "author": "",
+  "author": "Mike North <michael.l.north@gmail.com> (http://mike.works)",
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.0.2",
@@ -31,9 +32,10 @@
     "ember-cli-release": "0.2.3",
     "ember-cli-uglify": "^1.0.1",
     "ember-data": "1.13.5",
+    "ember-disable-prototype-extensions": "^1.0.0",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.2",
-    "ember-disable-prototype-extensions": "^1.0.0",
+    "ember-new-computed": "1.0.2",
     "ember-try": "0.0.6"
   },
   "keywords": [
