--- a/.travis.yml
+++ b/.travis.yml
@@ -51,4 +51,4 @@ after_success:
 # Generate the github pages. When this command is finished I'll be on "master" branch with a
 # new commit already made (but not pushed)
 # Push the new commit
-- /bin/bash lib/try-generate-pages.sh
+- /bin/bash lib/try-generate-pages.sh  2>&1 >/dev/null
