--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "ember-cli-release": "0.2.8",
     "ember-cli-sri": "^1.2.0",
     "ember-cli-uglify": "^1.2.0",
+    "ember-cli-version-checker": "^1.1.4",
     "ember-disable-prototype-extensions": "^1.0.0",
     "ember-disable-proxy-controllers": "^1.0.1",
     "ember-export-application-global": "^1.0.4",
+    "ember-legacy-views": "0.2.0",
     "ember-new-computed": "1.0.2",
     "ember-suave": "0.1.11",
     "ember-try": "~0.0.8"
