--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "ember-anchor",
-  "version": "0.0.8",
+  "version": "0.1.0",
   "description": "Simple scroll-to-anchor support for Ember.js apps",
   "directories": {
     "doc": "doc",
     "test": "tests"
   },
   "scripts": {
-    "start": "ember server",
     "build": "ember build",
+    "start": "ember server",
     "test": "ember try:testall"
   },
   "repository": "https://github.com/mike-north/ember-anchor.git",
@@ -20,26 +20,28 @@
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.2.0",
-    "ember-cli": "1.13.13",
+    "ember-ajax": "0.7.1",
+    "ember-cli": "2.4.2",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-content-security-policy": "0.4.0",
-    "ember-cli-dependency-checker": "^1.1.0",
+    "ember-cli-dependency-checker": "^1.2.0",
     "ember-cli-github-pages": "0.0.6",
     "ember-cli-htmlbars": "^1.0.1",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
-    "ember-cli-ic-ajax": "0.2.4",
     "ember-cli-inject-live-reload": "^1.3.1",
-    "ember-cli-qunit": "^1.0.4",
+    "ember-cli-qunit": "^1.2.1",
     "ember-cli-release": "0.2.8",
-    "ember-cli-sri": "^1.2.0",
+    "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-cli-version-checker": "^1.1.4",
-    "ember-disable-prototype-extensions": "^1.0.0",
+    "ember-disable-prototype-extensions": "^1.1.0",
     "ember-disable-proxy-controllers": "^1.0.1",
     "ember-export-application-global": "^1.0.4",
-    "ember-legacy-views": "0.2.0",
+    "ember-load-initializers": "^0.5.0",
+    "ember-resolver": "^2.0.3",
     "ember-suave": "0.1.11",
-    "ember-try": "~0.0.8"
+    "ember-try": "^0.1.2",
+    "loader.js": "^4.0.0"
   },
   "keywords": [
     "ember-addon"
