--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "ember-cli-content-security-policy": "0.4.0",
     "ember-cli-dependency-checker": "^1.2.0",
     "ember-cli-github-pages": "0.0.6",
-    "ember-cli-htmlbars": "^1.0.1",
+    "ember-cli-htmlbars": "1.0.3",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-inject-live-reload": "^1.3.1",
-    "ember-cli-qunit": "^1.2.1",
+    "ember-cli-qunit": "1.4.1",
     "ember-cli-release": "0.2.8",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
@@ -40,7 +40,7 @@
     "ember-load-initializers": "^0.5.0",
     "ember-resolver": "^2.0.3",
     "ember-suave": "0.1.11",
-    "ember-try": "^0.1.2",
+    "ember-try": "0.2.2",
     "loader.js": "^4.0.0"
   },
   "keywords": [
