--- a/bower.json
+++ b/bower.json
@@ -1,13 +1,14 @@
 {
   "name": "ember-anchor",
   "dependencies": {
-    "ember": "~1.10.0",
+    "ember": "release",
     "ember-cli-shims": "0.1.1",
     "ember-cli-test-loader": "0.2.2",
     "ember-qunit-notifications": "0.1.0"
   },
   "resolutions": {
     "ember-cli-test-loader": "0.2.2",
-    "ember-cli-shims": "0.1.1"
+    "ember-cli-shims": "0.1.1",
+    "ember": "release"
   }
 }
