--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,17 @@
 ---
 language: node_js
 node_js:
-  - "0.12"
+  - "stable"
 
-sudo: false
+dist: trusty
+sudo: required
+
+addons:
+  apt:
+    sources:
+    - google-chrome
+    packages:
+    - google-chrome-stable
 
 cache:
   directories:
@@ -29,31 +37,15 @@ matrix:
     - env: ALLOW_DEPRECATIONS=true EMBER_TRY_SCENARIO=ember-canary
 
 before_install:
-  - export PATH=/usr/local/phantomjs-2.0.0/bin:$PATH
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
   - "npm config set spin false"
-  - "npm install -g npm@^2"
 
 install:
-  - npm install -g bower
   - npm install
   - bower install
 
 script:
-  - ember try $EMBER_TRY_SCENARIO test
-
-after_success:
-# Remove the downloaded copy of phantomJS
-- rm -rf travis-phantomjs
-# Add a remote, authenticating via an OAuth token (encrypted via "travis secure")
-- git remote add deploy https://$GH_TOKEN:x-oauth-basic@github.com/truenorth/ember-anchor.git 2>&1 >/dev/null
-# Download all branches from this new remote (really the same remote, but different auth)
-- git fetch deploy
-# Check out a local copy of "master", but don't switch to it yet
-- git branch gh-pages deploy/gh-pages
-# Set up some required git config stuff (more env variables encrypted via "travis secure")
-- git config user.name "Mike North"
-- git config user.email "michael.l.north@gmail.com"
-# Generate the github pages. When this command is finished I'll be on "master" branch with a
-# new commit already made (but not pushed)
-# Push the new commit
-- /bin/bash lib/try-generate-pages.sh  2>&1 >/dev/null
+  # Usually, it's ok to finish the test scenario without reverting
+  #  to the addon's original dependency state, skipping "cleanup".
+  - ember try:one $EMBER_TRY_SCENARIO test --skip-cleanup
