Cut back ember-try scenarios

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,15 +19,9 @@ cache:
 
 env:
   - EMBER_TRY_SCENARIO=ember-1.10
-  - EMBER_TRY_SCENARIO=ember-1.11
-  - EMBER_TRY_SCENARIO=ember-1.12
   - EMBER_TRY_SCENARIO=ember-1.13
-  - EMBER_TRY_SCENARIO=ember-2.0
-  - EMBER_TRY_SCENARIO=ember-2.1
-  - EMBER_TRY_SCENARIO=ember-2.2
-  - EMBER_TRY_SCENARIO=ember-2.3
   - EMBER_TRY_SCENARIO=ember-2.4
-  - ALLOW_DEPRECATIONS=true EMBER_TRY_SCENARIO=ember-release
+  - EMBER_TRY_SCENARIO=ember-release
   - ALLOW_DEPRECATIONS=true EMBER_TRY_SCENARIO=ember-beta
   - ALLOW_DEPRECATIONS=true EMBER_TRY_SCENARIO=ember-canary
 
