--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,4 @@
 {
   "name": "ember-anchor",
-  "dependencies": {
-    "ember": "~2.5.0",
-    "ember-cli-shims": "0.1.1",
-    "ember-qunit-notifications": "0.1.0"
-  }
+  "dependencies": { }
 }
