--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
   "author": "Mike North <michael.l.north@gmail.com> (http://mike.works)",
   "license": "MIT",
   "devDependencies": {
+    "@types/ember": "^2.8.4",
+    "@types/qunit": "^2.0.31",
     "broccoli-asset-rev": "^2.4.2",
     "ember-ci": "0.1.3",
+    "ember-cli": "2.18.0",
     "ember-cli-app-version": "^3.1.3",
     "ember-cli-dependency-checker": "^2.1.0",
     "ember-cli-eslint": "^4.2.1",
@@ -35,21 +38,21 @@
     "ember-cli-test-loader": "^2.2.0",
     "ember-cli-uglify": "^2.0.0",
     "ember-cli-version-checker": "^2.1.0",
-    "ember-cli": "2.18.0",
     "ember-disable-prototype-extensions": "^1.1.0",
     "ember-disable-proxy-controllers": "^1.0.1",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
     "ember-resolver": "^4.5.0",
-    "ember-sublime": "0.0.9",
     "eslint-plugin-ember": "^5.0.0",
     "eslint-plugin-node": "^5.2.1",
     "loader.js": "^4.0.1"
   },
-  "keywords": ["ember-addon"],
+  "keywords": [
+    "ember-addon"
+  ],
   "dependencies": {
-    "ember-cli-htmlbars": "^2.0.3",
-    "ember-cli-babel": "^6.11.0"
+    "ember-cli-babel": "^6.11.0",
+    "ember-cli-htmlbars": "^2.0.3"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config",
