--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@types/ember": "^2.8.4",
     "@types/qunit": "^2.0.31",
     "broccoli-asset-rev": "^2.4.2",
-    "ember-ci": "0.1.3",
+    "ember-ci": "https://github.com/mike-north/ember-ci#b293c850564406fa5ee4f9df1d34f4099ee8934b",
     "ember-cli": "2.18.0",
     "ember-cli-app-version": "^3.1.3",
     "ember-cli-dependency-checker": "^2.1.0",
@@ -39,7 +39,6 @@
     "ember-cli-uglify": "^2.0.0",
     "ember-cli-version-checker": "^2.1.0",
     "ember-disable-prototype-extensions": "^1.1.0",
-    "ember-disable-proxy-controllers": "^1.0.1",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
     "ember-resolver": "^4.5.0",
@@ -47,9 +46,7 @@
     "eslint-plugin-node": "^5.2.1",
     "loader.js": "^4.0.1"
   },
-  "keywords": [
-    "ember-addon"
-  ],
+  "keywords": ["ember-addon"],
   "dependencies": {
     "ember-cli-babel": "^6.11.0",
     "ember-cli-htmlbars": "^2.0.3"
