--- a/package.json
+++ b/package.json
@@ -22,30 +22,29 @@
   "devDependencies": {
     "@types/ember": "^2.8.4",
     "@types/qunit": "^2.0.31",
-    "broccoli-asset-rev": "^2.4.2",
-    "ember-ci": "0.1.3",
-    "ember-cli": "2.18.0",
-    "ember-cli-app-version": "^3.1.3",
+    "broccoli-asset-rev": "^2.7.0",
+    "ember-cli": "~3.3.0",
     "ember-cli-dependency-checker": "^2.1.0",
     "ember-cli-eslint": "^4.2.1",
-    "ember-cli-fastboot": "1.1.1",
-    "ember-cli-htmlbars-inline-precompile": "^1.0.2",
-    "ember-cli-inject-live-reload": "^1.4.0",
-    "ember-cli-qunit": "^4.2.1",
-    "ember-cli-release": "1.0.0-beta.2",
+    "ember-cli-fastboot": "^2.0.0",
+    "ember-cli-htmlbars-inline-precompile": "^1.0.0",
+    "ember-cli-inject-live-reload": "^1.4.1",
+    "ember-cli-qunit": "^4.3.2",
     "ember-cli-shims": "^1.2.0",
     "ember-cli-sri": "^2.1.0",
-    "ember-cli-test-loader": "^2.2.0",
     "ember-cli-uglify": "^2.0.0",
-    "ember-cli-version-checker": "^2.1.0",
-    "ember-disable-prototype-extensions": "^1.1.0",
-    "ember-disable-proxy-controllers": "^1.0.1",
+    "ember-disable-prototype-extensions": "^1.1.2",
     "ember-export-application-global": "^2.0.0",
-    "ember-load-initializers": "^1.0.0",
+    "ember-load-initializers": "^1.1.0",
+    "ember-maybe-import-regenerator": "^0.1.6",
     "ember-resolver": "^4.5.0",
+    "ember-source": "~3.3.0",
+    "ember-source-channel-url": "^1.0.1",
+    "ember-try": "^0.2.23",
     "eslint-plugin-ember": "^5.0.0",
-    "eslint-plugin-node": "^5.2.1",
-    "loader.js": "^4.0.1"
+    "eslint-plugin-node": "^6.0.1",
+    "loader.js": "^4.2.3",
+    "qunit-dom": "^0.6.2"
   },
   "keywords": [
     "ember-addon"
@@ -57,5 +56,9 @@
   "ember-addon": {
     "configPath": "tests/dummy/config",
     "demoURL": "http://ember-anchor.mike.works"
+  },
+  "toolchain": {
+    "node": "8.11.4",
+    "yarn": "1.9.2"
   }
 }
