--- a/package.json
+++ b/package.json
@@ -20,6 +20,12 @@
   "author": "Mike North <michael.l.north@gmail.com> (http://mike.works)",
   "license": "MIT",
   "devDependencies": {
+    "@commitlint/cli": "7.2.1",
+    "@commitlint/config-conventional": "7.1.2",
+    "@commitlint/travis-cli": "7.2.1",
+    "@ember/optional-features": "^0.6.3",
+    "@mike-north/js-lib-renovate-config": "^0.0.1",
+    "@mike-north/js-lib-semantic-release-config": "^0.0.0-development",
     "@types/ember": "^2.8.4",
     "@types/qunit": "^2.0.31",
     "broccoli-asset-rev": "^2.7.0",
@@ -43,6 +49,7 @@
     "ember-try": "^0.2.23",
     "eslint-plugin-ember": "^5.0.0",
     "eslint-plugin-node": "^6.0.1",
+    "husky": "1.1.2",
     "loader.js": "^4.2.3",
     "qunit-dom": "^0.6.2"
   },
@@ -60,5 +67,18 @@
   "toolchain": {
     "node": "8.11.4",
     "yarn": "1.9.2"
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "./node_modules/.bin/commitlint -e $HUSKY_GIT_PARAMS"
+    }
+  },
+  "release": {
+    "extends": "@mike-north/js-lib-semantic-release-config"
   }
 }
