--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
   },
   "scripts": {
     "build": "ember build",
+    "lint:hbs": "ember-template-lint .",
     "lint:js": "eslint ./*.js addon addon-test-support app config lib server test-support tests",
     "start": "ember serve",
-    "test": "ember try:each"
+    "test": "ember try:each",
+    "travis-deploy-once": "travis-deploy-once",
+    "semantic-release": "semantic-release"
   },
   "repository": "https://github.com/mike-north/ember-anchor.git",
   "homepage": "https://github.com/mike-north/ember-anchor",
@@ -29,36 +32,37 @@
     "@types/ember": "^2.8.4",
     "@types/qunit": "^2.0.31",
     "broccoli-asset-rev": "^2.7.0",
-    "ember-cli": "~3.3.0",
-    "ember-cli-dependency-checker": "^2.1.0",
-    "ember-cli-eslint": "^4.2.1",
+    "ember-cli": "~3.5.0",
+    "ember-cli-dependency-checker": "^3.0.0",
+    "ember-cli-eslint": "^4.2.3",
     "ember-cli-fastboot": "^2.0.0",
-    "ember-cli-htmlbars-inline-precompile": "^1.0.0",
-    "ember-cli-inject-live-reload": "^1.4.1",
-    "ember-cli-qunit": "^4.3.2",
-    "ember-cli-shims": "^1.2.0",
-    "ember-cli-sri": "^2.1.0",
-    "ember-cli-uglify": "^2.0.0",
-    "ember-disable-prototype-extensions": "^1.1.2",
+    "ember-cli-htmlbars-inline-precompile": "^1.0.3",
+    "ember-cli-inject-live-reload": "^1.8.2",
+    "ember-cli-sri": "^2.1.1",
+    "ember-cli-template-lint": "^1.0.0-beta.1",
+    "ember-cli-uglify": "^2.1.0",
+    "ember-disable-prototype-extensions": "^1.1.3",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.1.0",
     "ember-maybe-import-regenerator": "^0.1.6",
-    "ember-resolver": "^4.5.0",
-    "ember-source": "~3.3.0",
-    "ember-source-channel-url": "^1.0.1",
-    "ember-try": "^0.2.23",
-    "eslint-plugin-ember": "^5.0.0",
-    "eslint-plugin-node": "^6.0.1",
+    "ember-qunit": "^3.4.1",
+    "ember-resolver": "^5.0.1",
+    "ember-source": "~3.5.0",
+    "ember-source-channel-url": "^1.1.0",
+    "ember-try": "^1.0.0",
+    "eslint-plugin-ember": "^5.2.0",
+    "eslint-plugin-node": "^7.0.1",
     "husky": "1.1.2",
-    "loader.js": "^4.2.3",
-    "qunit-dom": "^0.6.2"
+    "loader.js": "^4.7.0",
+    "qunit-dom": "^0.8.0",
+    "travis-deploy-once": "^5.0.9"
   },
   "keywords": [
     "ember-addon"
   ],
   "dependencies": {
-    "ember-cli-babel": "^6.11.0",
-    "ember-cli-htmlbars": "^2.0.3"
+    "ember-cli-babel": "^6.16.0",
+    "ember-cli-htmlbars": "^3.0.0"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config",
