--- a/.travis.yml
+++ b/.travis.yml
@@ -41,9 +41,10 @@ jobs:
     - env: EMBER_TRY_SCENARIO=ember-release
     - env: EMBER_TRY_SCENARIO=ember-beta
     - env: EMBER_TRY_SCENARIO=ember-default-with-jquery
+
     - stage: 'Canary Tests'
       script:
-        - yarn test
+        - node_modules/.bin/ember try:one $EMBER_TRY_SCENARIO
     - env: EMBER_TRY_SCENARIO=ember-canary
 
 before_install:
