--- a/.travis.yml
+++ b/.travis.yml
@@ -45,7 +45,7 @@ jobs:
     - stage: 'Canary Tests'
       script:
         - node_modules/.bin/ember try:one $EMBER_TRY_SCENARIO
-    - env: EMBER_TRY_SCENARIO=ember-canary
+      env: EMBER_TRY_SCENARIO=ember-canary
 
 before_install:
   - curl -o- -L https://yarnpkg.com/install.sh | bash
