--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "build": "ember build",
     "lint:hbs": "ember-template-lint .",
-    "lint:js": "eslint ./*.js addon addon-test-support app config lib server test-support tests",
+    "lint:js": "eslint .",
     "start": "ember serve",
     "test": "ember try:each",
     "travis-deploy-once": "travis-deploy-once",
@@ -27,8 +27,6 @@
     "@commitlint/config-conventional": "7.1.2",
     "@commitlint/travis-cli": "7.2.1",
     "@ember/optional-features": "0.7.0",
-    "@mike-north/js-lib-renovate-config": "0.0.1",
-    "@mike-north/js-lib-semantic-release-config": "0.0.0-development",
     "@types/ember": "2.8.33",
     "@types/qunit": "2.5.3",
     "broccoli-asset-rev": "^2.7.0",
