--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
     "@commitlint/config-conventional": "7.1.2",
     "@commitlint/travis-cli": "7.2.1",
     "@ember/optional-features": "0.7.0",
+    "@mike-north/js-lib-renovate-config": "1.0.0",
+    "@mike-north/js-lib-semantic-release-config": "1.0.1",
     "@types/ember": "2.8.34",
     "@types/qunit": "2.5.3",
     "broccoli-asset-rev": "3.0.0",
-    "ember-cli": "3.5.1",
     "ember-cli-dependency-checker": "3.0.0",
     "ember-cli-eslint": "5.0.0",
     "ember-cli-fastboot": "2.0.0",
@@ -39,19 +40,22 @@
     "ember-cli-sri": "2.1.1",
     "ember-cli-template-lint": "1.0.0-beta.2",
     "ember-cli-uglify": "2.1.0",
+    "ember-cli": "3.5.1",
     "ember-disable-prototype-extensions": "1.1.3",
     "ember-export-application-global": "2.0.0",
     "ember-load-initializers": "2.0.0",
     "ember-maybe-import-regenerator": "0.1.6",
     "ember-qunit": "4.1.2",
     "ember-resolver": "5.0.1",
-    "ember-source": "3.5.1",
     "ember-source-channel-url": "1.1.0",
+    "ember-source": "3.5.1",
     "ember-try": "1.1.0",
     "eslint-plugin-ember": "6.0.1",
     "eslint-plugin-node": "8.0.0",
     "husky": "1.2.0",
     "loader.js": "4.7.0",
+    "semantic-release": "^15.10.8",
+    "travis-deploy-once": "^5.0.9",
     "qunit-dom": "0.8.1"
   },
   "keywords": [
@@ -81,11 +85,5 @@
   },
   "release": {
     "extends": "@mike-north/js-lib-semantic-release-config"
-  },
-  "optionalDependencies": {
-    "@mike-north/js-lib-renovate-config": "1.0.0",
-    "@mike-north/js-lib-semantic-release-config": "1.0.1",
-    "semantic-release": "^15.10.8",
-    "travis-deploy-once": "^5.0.9"
   }
 }
