--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,13 @@ env:
     # See https://git.io/vdao3 for details.
     - JOBS=1
 
+stages:
+  - 'Tests'
+  - 'Additional Tests'
+  - 'Canary Tests'
+  - name: 'Deploy'
+    if: branch = master AND type = push
+
 jobs:
   fail_fast: true
   allow_failures:
@@ -27,7 +34,11 @@ jobs:
     # runs linting and tests with current locked deps
 
     - stage: 'Tests'
-      name: 'Tests'
+      name: 'Conventional Commits'
+      script: commitlint-travis
+    - name: 'Tests'
+      install:
+        - yarn install --non-interactive
       script:
         - yarn lint:hbs
         - yarn lint:js
@@ -36,7 +47,10 @@ jobs:
     # we recommend new addons test the current and previous LTS
     # as well as latest stable release (bonus points to beta/canary)
     - stage: 'Additional Tests'
-      node_js: '10'
+      name: 'Floating Dependencies'
+      script:
+        - ember test
+    - node_js: '10'
       env: EMBER_TRY_SCENARIO=ember-lts-2.16
     - env: EMBER_TRY_SCENARIO=ember-lts-2.18
     - env: EMBER_TRY_SCENARIO=ember-release
@@ -48,6 +62,12 @@ jobs:
         - node_modules/.bin/ember try:one $EMBER_TRY_SCENARIO
       env: EMBER_TRY_SCENARIO=ember-canary
 
+    - stage: 'Deploy'
+      name: 'Publish to npm'
+      install:
+        - yarn install --non-interactive
+      script: yarn semantic-release
+
 before_install:
   - curl -o- -L https://yarnpkg.com/install.sh | bash
   - export PATH=$HOME/.yarn/bin:$PATH
@@ -56,4 +76,4 @@ install:
   - yarn install --no-lockfile --non-interactive
 
 script:
-  - node_modules/.bin/ember try:one $EMBER_TRY_SCENARIO && yarn travis-deploy-once "yarn semantic-release"
+  - node_modules/.bin/ember try:one $EMBER_TRY_SCENARIO
